--- a/metadata/md5-cache/sys-kernel/linux-bcm2711-rpi-4-b_kernel_image-6.5.1
+++ b/metadata/md5-cache/sys-kernel/linux-bcm2711-rpi-4-b_kernel_image-6.5.1
@@ -1,6 +1,6 @@
 DEFINED_PHASES=install
 DEPEND==sys-kernel/gentoo-sources-6.5.1
-DESCRIPTION=kernel image for my ASUS Tinkerboard S
+DESCRIPTION=kernel image for my raspberry pi 4 model B embedded system
 EAPI=6
 HOMEPAGE=https://github.com/JosephBrendler/myUtilities
 IUSE=symlink
@@ -10,4 +10,4 @@ RDEPEND==sys-kernel/gentoo-sources-6.5.1
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-bcm2711-rpi-4-b_kernel_image-6.5.1.tar.bz2
-_md5_=872c1e2529cc531f7a1f5c2b689631ea
+_md5_=e7b87e56aa87bf0ef7838fd86b05b107
