adding linux-bcm2710-rpi-3-b-plus_kernel_image-6.5.1

--- a/metadata/md5-cache/sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image-6.5.1
+++ b/metadata/md5-cache/sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image-6.5.1
@@ -1,11 +1,13 @@
 DEFINED_PHASES=install
+DEPEND==sys-kernel/gentoo-sources-6.5.1
 DESCRIPTION=kernel image for my raspberry pi 4 model B embedded system
 EAPI=6
 HOMEPAGE=https://github.com/JosephBrendler/myUtilities
 IUSE=symlink
 KEYWORDS=~arm
 LICENSE=MIT
+RDEPEND==sys-kernel/gentoo-sources-6.5.1
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-bcm2710-rpi-3-b-plus_kernel_image-6.5.1.tar.bz2
-_md5_=c443307ac378cfa93bbe7cdc2e3390ad
+_md5_=38fd2b9c00fb05ff6bf7006e67d4a5f9
