--- a/metadata/md5-cache/sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image-6.5.1
+++ b/metadata/md5-cache/sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image-6.5.1
@@ -1,13 +1,11 @@
 DEFINED_PHASES=install
-DEPEND==sys-kernel/gentoo-sources-6.5.1
-DESCRIPTION=kernel image for my raspberry pi 4 model B embedded system
+DESCRIPTION=kernel image for my raspberry pi 3 model B+ embedded system(s)
 EAPI=6
 HOMEPAGE=https://github.com/JosephBrendler/myUtilities
 IUSE=symlink
 KEYWORDS=~arm
 LICENSE=MIT
-RDEPEND==sys-kernel/gentoo-sources-6.5.1
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-bcm2710-rpi-3-b-plus_kernel_image-6.5.1.tar.bz2
-_md5_=38fd2b9c00fb05ff6bf7006e67d4a5f9
+_md5_=d7b6b7050e5b7dea7038443878e0be98
