--- a/metadata/md5-cache/dev-embedded/tinker264-headless-meta-0.0.1
+++ b/metadata/md5-cache/dev-embedded/tinker264-headless-meta-0.0.1
@@ -6,7 +6,7 @@ HOMEPAGE=https://github.com/joetoo
 IUSE=-boot-fw +innercore -gpio +joetoo
 KEYWORDS=~arm64
 LICENSE=metapackage
-RDEPEND=>=sys-apps/openrc-0.42.1 >=app-shells/bash-5.0 >=sys-firmware/b43-firmware-5.100.138 innercore? ( >=sys-kernel/linux-firmware-20220310 >=sys-apps/rng-tools-6.8 # >=sys-boot/tinker264-boot-config-0.0.1 ) joetoo? ( >=joetoo-base/joetoo-meta-0.2.0 )
+RDEPEND=>=sys-apps/openrc-0.42.1 >=app-shells/bash-5.0 >=sys-firmware/b43-firmware-5.100.138 innercore? ( >=sys-kernel/linux-firmware-20220310 >=sys-apps/rng-tools-6.8 ) joetoo? ( >=joetoo-base/joetoo-meta-0.2.0 )
 REQUIRED_USE=innercore
 SLOT=0
-_md5_=d85b5cd8eed6ea76eab6771597a228d0
+_md5_=19fe42d35625f145a7614de10a4fbf1c
