--- a/metadata/md5-cache/sys-kernel/kernelupdate-embedded-0.1.3
+++ b/metadata/md5-cache/sys-kernel/kernelupdate-embedded-0.1.3
@@ -1,11 +1,11 @@
 DEFINED_PHASES=install postinst
-DEPEND=>=dev-util/joetoolkit-0.1.5 >=joetoo-base/joetoo-meta-0.0.4b
+DEPEND=>=sys-devel/crossdev-20230321 >=dev-util/joetoolkit-0.1.5 >=joetoo-base/joetoo-meta-0.0.4b
 DESCRIPTION=kernel builder program for embedded systems (tinkerboard s)
 EAPI=8
 HOMEPAGE=https://github.com/joetoo
-IUSE=+rk3288-tinker-s rk3288-tinker raspi3 raspi4b
+IUSE=+rk3288-tinker-s rk3288-tinker bcm2710-rpi-3-b-plus bcm2711-rpi-4-b bcm2712-rpi-5-b rk3399-rock-pi-4c-plus
 LICENSE=MIT
-RDEPEND=>=dev-util/joetoolkit-0.1.5 >=joetoo-base/joetoo-meta-0.0.4b
-REQUIRED_USE=^^ ( rk3288-tinker-s rk3288-tinker raspi3 raspi4b )
+RDEPEND=>=sys-devel/crossdev-20230321 >=dev-util/joetoolkit-0.1.5 >=joetoo-base/joetoo-meta-0.0.4b
+REQUIRED_USE=|| ( rk3288-tinker-s rk3288-tinker bcm2710-rpi-3-b-plus bcm2711-rpi-4-b bcm2712-rpi-5-b rk3399-rock-pi-4c-plus )
 SLOT=0
-_md5_=c69aee364506b3a8e94a86e1b3b105a8
+_md5_=e3a388ba377a26ad1881590156223e76
