--- a/metadata/md5-cache/sys-kernel/kernelupdate-embedded-0.1.4
+++ b/metadata/md5-cache/sys-kernel/kernelupdate-embedded-0.1.4
@@ -3,9 +3,9 @@ DEPEND=>=sys-devel/crossdev-20230321 >=dev-util/joetoolkit-0.1.5 >=joetoo-base/j
 DESCRIPTION=kernel builder program for embedded systems (tinkerboard s)
 EAPI=8
 HOMEPAGE=https://github.com/joetoo
-IUSE=+rk3288-tinker-s rk3399-tinker2-s bcm2710-rpi-3-b-plus bcm2711-rpi-4-b bcm2712-rpi-5-b rk3399-rock-4c-plus
+IUSE=+rk3288-tinker-s rk3399-tinker2-s rk3399-rock-4c-plus bcm2710-rpi-3-b-plus bcm2711-rpi-4-b bcm2712-rpi-5-b
 LICENSE=MIT
 RDEPEND=>=sys-devel/crossdev-20230321 >=dev-util/joetoolkit-0.1.5 >=joetoo-base/joetoo-meta-0.0.4b
-REQUIRED_USE=|| ( rk3288-tinker-s rk3399-tinker2-s bcm2710-rpi-3-b-plus bcm2711-rpi-4-b bcm2712-rpi-5-b rk3399-rock-4c-plus )
+REQUIRED_USE=|| ( rk3288-tinker-s rk3399-tinker2-s rk3399-rock-4c-plus bcm2710-rpi-3-b-plus bcm2711-rpi-4-b bcm2712-rpi-5-b )
 SLOT=0
-_md5_=a0cc04a9117db9febcf7743d69bcca66
+_md5_=bf3057f8ceea14501e2d6bae0e421b81
