boot-config dependency

--- a/metadata/md5-cache/dev-embedded/sbc-headless-meta-0.0.1
+++ b/metadata/md5-cache/dev-embedded/sbc-headless-meta-0.0.1
@@ -6,7 +6,7 @@ HOMEPAGE=https://github.com/joetoo
 IUSE=-boot-fw +innercore +gpio +joetoo bcm2712-rpi-5-b bcm2711-rpi-4-b bcm2710-rpi-3-b-plus bcm2709-rpi-2-b rk3288-tinker-s rk3399-rock-pi-4c-plus rk3399-tinker-2-s rk3588s-orangepi-5
 KEYWORDS=~arm ~arm64
 LICENSE=metapackage
-RDEPEND=>=sys-apps/openrc-0.42.1 >=app-shells/bash-5.0 >=sys-firmware/b43-firmware-5.100.138 innercore? ( >=sys-kernel/linux-firmware-20220310 >=sys-apps/rng-tools-6.8 >=sys-boot/tinker264-boot-config-0.0.1 ) gpio? ( >=dev-libs/libgpiod-2.1 ) joetoo? ( >=joetoo-base/joetoo-meta-0.2.0 >=dev-util/joetoolkit-0.3.3 raspi564? ( >=dev-embedded/sbc_status_leds-0.0.1[raspi564(+)] ) raspi64? ( >=dev-embedded/sbc_status_leds-0.0.1[raspi64(+)] ) raspi32? ( >=dev-embedded/sbc_status_leds-0.0.1[raspi32(+)] ) tinker32? ( >=dev-embedded/sbc_status_leds-0.0.1[tinker32(+)] ) rock4c64? ( >=dev-embedded/sbc_status_leds-0.0.1[rock4c64(+)] ) tinker264? ( >=dev-embedded/sbc_status_leds-0.0.1[tinker264(+)] ) opi564? ( >=dev-embedded/sbc_status_leds-0.0.1[opi564(+)] ) )
+RDEPEND=>=sys-apps/openrc-0.42.1 >=app-shells/bash-5.0 >=sys-firmware/b43-firmware-5.100.138 innercore? ( >=sys-kernel/linux-firmware-20220310 >=sys-apps/rng-tools-6.8 >=sys-boot/tinker264-boot-config-0.0.1 bcm2712-rpi-5-b? ( >=sys-boot/sbc-boot-config-0.0.1[bcm2712-rpi-5-b(+)] ) bcm2711-rpi-4-b4? ( >=sys-boot/sbc-boot-config-0.0.1[bcm2711-rpi-4-b(+)] ) bcm2710-rpi-3-b-plus? ( >=sys-boot/sbc-boot-config-0.0.1[bcm2710-rpi-3-b-plus(+)] ) bcm2709-rpi-2-b? ( >=sys-boot/sbc-boot-config-0.0.1[bcm2709-rpi-2-b(+)] ) rk3288-tinker-s? ( >=sys-boot/sbc-boot-config-0.0.1[rk3288-tinker-s(+)] ) rk3399-rock-pi-4c-plus? ( >=sys-boot/sbc-boot-config-0.0.1[rk3399-rock-pi-4c-plus(+)] ) rk3399-tinker-2-s? ( >=sys-boot/sbc-boot-config-0.0.1[rk3399-tinker-2-s(+)] ) rk3588s-orangepi-5? ( >=sys-boot/sbc-boot-config-0.0.1[rk3588s-orangepi-5(+)] ) ) gpio? ( >=dev-libs/libgpiod-2.1 ) joetoo? ( >=joetoo-base/joetoo-meta-0.2.0 >=dev-util/joetoolkit-0.3.3 bcm2712-rpi-5-b? ( >=dev-embedded/sbc_status_leds-0.0.1[bcm2712-rpi-5-b(+)] ) bcm2711-rpi-4-b4? ( >=dev-embedded/sbc_status_leds-0.0.1[bcm2711-rpi-4-b(+)] ) bcm2710-rpi-3-b-plus? ( >=dev-embedded/sbc_status_leds-0.0.1[bcm2710-rpi-3-b-plus(+)] ) bcm2709-rpi-2-b? ( >=dev-embedded/sbc_status_leds-0.0.1[bcm2709-rpi-2-b(+)] ) rk3288-tinker-s? ( >=dev-embedded/sbc_status_leds-0.0.1[rk3288-tinker-s(+)] ) rk3399-rock-pi-4c-plus? ( >=dev-embedded/sbc_status_leds-0.0.1[rk3399-rock-pi-4c-plus(+)] ) rk3399-tinker-2-s? ( >=dev-embedded/sbc_status_leds-0.0.1[rk3399-tinker-2-s(+)] ) rk3588s-orangepi-5? ( >=dev-embedded/sbc_status_leds-0.0.1[rk3588s-orangepi-5(+)] ) )
 REQUIRED_USE=innercore ^^ ( bcm2712-rpi-5-b bcm2711-rpi-4-b bcm2710-rpi-3-b-plus bcm2709-rpi-2-b rk3288-tinker-s rk3399-rock-pi-4c-plus rk3399-tinker-2-s rk3588s-orangepi-5 )
 SLOT=0
-_md5_=abce2f3f7031163dacd3a6323c13711b
+_md5_=bf2995fa1c7e4cf767606cc8213884c9
