--- a/metadata/md5-cache/dev-sbc/sbc-headless-meta-0.0.1
+++ b/metadata/md5-cache/dev-sbc/sbc-headless-meta-0.0.1
@@ -6,8 +6,8 @@ HOMEPAGE=https://github.com/joetoo
 IUSE=+innercore +gpio +joetoo -boot-fw -upstream bcm2712-rpi-5-b bcm2711-rpi-4-b bcm2710-rpi-3-b-plus bcm2709-rpi-2-b rk3288-tinker-s rk3399-rock-pi-4c-plus rk3399-tinker-2-s rk3588s-orangepi-5
 KEYWORDS=~arm ~arm64
 LICENSE=metapackage
-RDEPEND=>=sys-apps/openrc-0.42.1 >=app-shells/bash-5.0 >=sys-firmware/b43-firmware-5.100.138 innercore? ( >=sys-kernel/linux-firmware-20220310 >=sys-apps/rng-tools-6.8 >=sys-apps/sbc-gpio-0.0.1 >=sys-apps/sbc-spi-0.0.1 bcm2712-rpi-5-b? ( >=dev-sbc/sbc-boot-config-0.0.1[bcm2712-rpi-5-b(+)] >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) bcm2711-rpi-4-b? ( >=dev-sbc/sbc-boot-config-0.0.1[bcm2711-rpi-4-b(+)] >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) bcm2710-rpi-3-b-plus? ( >=dev-sbc/sbc-boot-config-0.0.1[bcm2710-rpi-3-b-plus(+)] >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) bcm2709-rpi-2-b? ( >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 >=dev-sbc/sbc-boot-config-0.0.1[bcm2709-rpi-2-b(+)] media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) rk3288-tinker-s? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3288-tinker-s(+)] >=sys-apps/sbc-i2c-0.0.1 ) rk3399-rock-pi-4c-plus? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3399-rock-pi-4c-plus(+)] >=sys-apps/sbc-i2c-0.0.1 ) rk3399-tinker-2-s? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3399-tinker-2-s(+)] >=sys-apps/sbc-i2c-0.0.1 ) rk3588s-orangepi-5? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3588s-orangepi-5(+)] >=sys-apps/sbc-i2c-0.0.1 ) ) gpio? ( >=dev-libs/libgpiod-2.1 ) joetoo? ( >=joetoo-base/joetoo-meta-0.2.0 >=dev-util/joetoolkit-0.3.3 bcm2712-rpi-5-b? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2712-rpi-5-b(+)] ) bcm2711-rpi-4-b? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2711-rpi-4-b(+)] ) bcm2710-rpi-3-b-plus? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2710-rpi-3-b-plus(+)] ) bcm2709-rpi-2-b? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2709-rpi-2-b(+)] ) rk3288-tinker-s? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3288-tinker-s(+)] ) rk3399-rock-pi-4c-plus? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3399-rock-pi-4c-plus(+)] ) rk3399-tinker-2-s? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3399-tinker-2-s(+)] ) rk3588s-orangepi-5? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3588s-orangepi-5(+)] ) ) boot-fw? ( bcm2712-rpi-5-b? ( upstream? ( >=sys-boot/rpi5-64bit-firmware-1.20230405 ) !upstream? ( sys-kernel/linux-bcm2712-rpi-5-b_kernel_image ) ) bcm2711-rpi-4-b? ( upstream? ( >=sys-boot/rpi3-64bit-firmware-1.20220331 ) !upstream? ( sys-kernel/linux-bcm2711-rpi-4-b_kernel_image ) ) bcm2710-rpi-3-b-plus? ( upstream? ( >=sys-boot/rpi3-64bit-firmware-1.20220331 ) !upstream? ( sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image ) ) bcm2709-rpi-2-b? ( upstream? ( >=sys-boot/rpi2-32bit-firmware-0.0.1 ) !upstream? ( sys-kernel/linux-bcm2709-rpi-2-b_kernel_image ) ) rk3399-rock-pi-4c-plus? ( >=sys-boot/rock4c64-firmware-1.20230926 ) rk3288-tinker-s? ( >=sys-kernel/linux-rk3288-tinker-s_kernel_image ) rk3399-rock-pi-4c-plus? ( >=sys-kernel/linux-rk3399-rock-4c-plus_kernel_image ) rk3399-tinker-2-s? ( >=sys-kernel/linux-rk3399-tinker-2-s_kernel_image ) rk3588s-orangepi-5? ( >=sys-kernel/linux-rk3588s-orangepi-5_kernel_image ) )
+RDEPEND=>=sys-apps/openrc-0.42.1 >=app-shells/bash-5.0 >=sys-firmware/b43-firmware-5.100.138 innercore? ( >=sys-kernel/linux-firmware-20220310 >=sys-apps/rng-tools-6.8 >=sys-apps/sbc-gpio-0.0.1 >=sys-apps/sbc-spi-0.0.1 bcm2712-rpi-5-b? ( >=dev-sbc/sbc-boot-config-0.0.1[bcm2712-rpi-5-b(+)] >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) bcm2711-rpi-4-b? ( >=dev-sbc/sbc-boot-config-0.0.1[bcm2711-rpi-4-b(+)] >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) bcm2710-rpi-3-b-plus? ( >=dev-sbc/sbc-boot-config-0.0.1[bcm2710-rpi-3-b-plus(+)] >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) bcm2709-rpi-2-b? ( >=sys-apps/rpi3-ondemand-cpufreq-1.1.1-r1 >=dev-sbc/sbc-boot-config-0.0.1[bcm2709-rpi-2-b(+)] media-libs/raspberrypi-userland >=sys-apps/rpi-i2c-1.0.1 >=net-wireless/rpi3-wifi-regdom-1.1-r1 >=sys-apps/rpi-serial-1.0.0-r1 >=sys-apps/rpi-video-1.0.0-r1 ) rk3288-tinker-s? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3288-tinker-s(+)] >=sys-apps/sbc-i2c-0.0.1 ) rk3399-rock-pi-4c-plus? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3399-rock-pi-4c-plus(+)] >=sys-apps/sbc-i2c-0.0.1 ) rk3399-tinker-2-s? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3399-tinker-2-s(+)] >=sys-apps/sbc-i2c-0.0.1 ) rk3588s-orangepi-5? ( >=dev-sbc/sbc-boot-config-0.0.1[rk3588s-orangepi-5(+)] >=sys-apps/sbc-i2c-0.0.1 ) ) gpio? ( >=dev-libs/libgpiod-2.1 ) joetoo? ( >=joetoo-base/joetoo-meta-0.2.0 >=dev-util/joetoolkit-0.3.3 bcm2712-rpi-5-b? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2712-rpi-5-b(+)] ) bcm2711-rpi-4-b? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2711-rpi-4-b(+)] ) bcm2710-rpi-3-b-plus? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2710-rpi-3-b-plus(+)] ) bcm2709-rpi-2-b? ( >=dev-sbc/sbc-status-leds-0.0.1[bcm2709-rpi-2-b(+)] ) rk3288-tinker-s? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3288-tinker-s(+)] ) rk3399-rock-pi-4c-plus? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3399-rock-pi-4c-plus(+)] ) rk3399-tinker-2-s? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3399-tinker-2-s(+)] ) rk3588s-orangepi-5? ( >=dev-sbc/sbc-status-leds-0.0.1[rk3588s-orangepi-5(+)] ) ) boot-fw? ( bcm2712-rpi-5-b? ( upstream? ( >=sys-boot/rpi5-64bit-firmware-1.20230405 ) !upstream? ( sys-kernel/linux-bcm2712-rpi-5-b_kernel_image ) ) bcm2711-rpi-4-b? ( upstream? ( >=sys-boot/rpi3-64bit-firmware-1.20220331 ) !upstream? ( sys-kernel/linux-bcm2711-rpi-4-b_kernel_image ) ) bcm2710-rpi-3-b-plus? ( upstream? ( >=sys-boot/rpi3-64bit-firmware-1.20220331 ) !upstream? ( sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image ) ) bcm2709-rpi-2-b? ( upstream? ( >=sys-boot/rpi2-32bit-firmware-0.0.1 ) !upstream? ( sys-kernel/linux-bcm2709-rpi-2-b_kernel_image ) ) rk3288-tinker-s? ( sys-kernel/linux-rk3288-tinker-s_kernel_image ) rk3399-rock-pi-4c-plus? ( sys-kernel/linux-rk3399-rock-4c-plus_kernel_image ) rk3399-tinker-2-s? ( sys-kernel/linux-rk3399-tinker-2-s_kernel_image ) rk3588s-orangepi-5? ( sys-kernel/linux-rk3588s-orangepi-5_kernel_image ) )
 REQUIRED_USE=innercore ^^ ( bcm2712-rpi-5-b bcm2711-rpi-4-b bcm2710-rpi-3-b-plus bcm2709-rpi-2-b rk3288-tinker-s rk3399-rock-pi-4c-plus rk3399-tinker-2-s rk3588s-orangepi-5 ) upstream? ( boot-fw )
 RESTRICT=rk3288-tinker-s? ( upstream ) rk3399-rock-pi-4c-plus? ( upstream ) rk3399-tinker-2-s? ( upstream ) rk3588s-orangepi-5? ( upstream )
 SLOT=0
-_md5_=7faaa66dec28910af3a4a78319a1aba7
+_md5_=ae89576997a398981c19150b4f0074d8
