--- a/metadata/md5-cache/sys-kernel/linux-domU_kernel_image-6.9.1
+++ b/metadata/md5-cache/sys-kernel/linux-domU_kernel_image-6.9.1
@@ -9,5 +9,5 @@ LICENSE=MIT
 RDEPEND==sys-kernel/gentoo-sources-6.9.1
 RESTRICT=mirror
 SLOT=0
-SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-domU_kernel_image-6.9.1.tar.bz2
-_md5_=ca3435738477f8894ff13236f0123a3c
+SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-domU_kernel_image-6.9.1-gentoo.tar.bz2
+_md5_=b2913549beecfb79a3854b45b04a422e
