add boards to IUSE and REQUIRED_USE ^^()

--- a/metadata/md5-cache/sys-boot/rockchip-boot-firmware-0.0.1
+++ b/metadata/md5-cache/sys-boot/rockchip-boot-firmware-0.0.1
@@ -2,10 +2,11 @@ DEFINED_PHASES=install postinst setup
 DESCRIPTION=Rockchip bootloader firmware for supported boards
 EAPI=8
 HOMEPAGE=https://github.com/JosephBrendler/joetoo
-IUSE=-kernel -dtbo
+IUSE=rk3288-tinker-s rk3399-rock-pi-4c-plus rk3399-tinker-2 rk3588s-orangepi-5 -kernel -dtbo
 KEYWORDS=~arm ~arm64
 LICENSE=GPL-2
 RDEPEND=
-RESTRICT=mirror
+REQUIRED_USE=^^ ( rk3288-tinker-s rk3399-rock-pi-4c-plus rk3399-tinker-2 rk3588s-orangepi-5 )
+RESTRICT=mirror binchecks strip
 SLOT=0
-_md5_=eab80b33673797a82c92c8078d9d3678
+_md5_=8426af27f5769c6d7f813346ac66cf47
