--- a/metadata/md5-cache/sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image-6.7.8
+++ b/metadata/md5-cache/sys-kernel/linux-bcm2710-rpi-3-b-plus_kernel_image-6.7.8
@@ -1,13 +1,13 @@
-DEFINED_PHASES=install
+DEFINED_PHASES=install preinst
 DEPEND=sources? ( =sys-kernel/raspi-sources-6.7.8 )
-DESCRIPTION=kernel image for my raspberry pi 3 model B+ embedded system(s)
-EAPI=6
+DESCRIPTION=kernel image for bcm2710-rpi-3-b-plus sbc
+EAPI=8
 HOMEPAGE=https://github.com/JosephBrendler/myUtilities
-IUSE=-symlink +sources
-KEYWORDS=~arm
+IUSE=+dtb +dtbo -symlink -sources
+KEYWORDS=~arm ~arm64
 LICENSE=MIT
 RDEPEND=sources? ( =sys-kernel/raspi-sources-6.7.8 )
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-bcm2710-rpi-3-b-plus_kernel_image-6.7.8.tar.bz2
-_md5_=31e5b81dceffde287cba2d9e8962c569
+_md5_=ac19a82d2037fa96f52a9f464e78b717
