--- a/metadata/md5-cache/sys-kernel/linux-rk3288-tinker-s_kernel_image-6.9.1
+++ b/metadata/md5-cache/sys-kernel/linux-rk3288-tinker-s_kernel_image-6.9.1
@@ -1,13 +1,13 @@
-DEFINED_PHASES=install
-DEPEND=sources? ( =sys-kernel/rockchip-sources-6.9.1 )
-DESCRIPTION=kernel image for my ASUS Tinkerboard S
-EAPI=6
+DEFINED_PHASES=install preinst
+DEPEND=sources? ( =sys-kernel/raspi-sources-6.9.1 )
+DESCRIPTION=kernel image for rk3288-tinker-s sbc
+EAPI=8
 HOMEPAGE=https://github.com/JosephBrendler/myUtilities
-IUSE=-symlink +sources
-KEYWORDS=~arm
+IUSE=+dtb +dtbo -symlink -sources
+KEYWORDS=~arm ~arm64
 LICENSE=MIT
-RDEPEND=sources? ( =sys-kernel/rockchip-sources-6.9.1 )
+RDEPEND=sources? ( =sys-kernel/raspi-sources-6.9.1 )
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-rk3288-tinker-s_kernel_image-6.9.1.tar.bz2
-_md5_=ef40fa20b52f69f8596e0b3231f1339a
+_md5_=ac19a82d2037fa96f52a9f464e78b717
