--- a/metadata/md5-cache/sys-kernel/linux-rk3288-tinker-s_kernel_image-6.9.3
+++ b/metadata/md5-cache/sys-kernel/linux-rk3288-tinker-s_kernel_image-6.9.3
@@ -1,13 +1,14 @@
 DEFINED_PHASES=install preinst
-DEPEND=sources? ( =sys-kernel/raspi-sources-6.9.3 )
+DEPEND=raspi-sources? ( =sys-kernel/raspi-sources-6.9.3 ) rockchip-sources? ( =sys-kernel/rockchip-sources-6.9.3 )
 DESCRIPTION=kernel image for rk3288-tinker-s sbc
 EAPI=8
 HOMEPAGE=https://github.com/JosephBrendler/myUtilities
-IUSE=+dtb +dtbo -symlink -sources
-KEYWORDS=~arm ~arm64
+IUSE=+dtb +dtbo -symlink -raspi-sources -rockchip-sources
+KEYWORDS=~arm ~arm64 ~amd64
 LICENSE=MIT
-RDEPEND=sources? ( =sys-kernel/raspi-sources-6.9.3 )
+RDEPEND=raspi-sources? ( =sys-kernel/raspi-sources-6.9.3 ) rockchip-sources? ( =sys-kernel/rockchip-sources-6.9.3 )
+REQUIRED_USE=raspi-sources? ( ! rockchip-sources ) rockchip-sources? ( ! raspi-sources )
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/linux-rk3288-tinker-s_kernel_image-6.9.3.tar.bz2
-_md5_=ac19a82d2037fa96f52a9f464e78b717
+_md5_=b835747e47ee0343005a1bcf19a3c89a
