--- a/metadata/md5-cache/sys-kernel/raspi-sources-6.9.2
+++ b/metadata/md5-cache/sys-kernel/raspi-sources-6.9.2
@@ -2,10 +2,10 @@ DEFINED_PHASES=install postinst setup
 DESCRIPTION=kernel sources for broadcom raspi SOC based single board computers (SBCs)
 EAPI=8
 HOMEPAGE=https://github.com/raspberrypi/linux https://github.com/JosephBrendler/joetoo
-IUSE=-symlink
+IUSE=symlink config
 KEYWORDS=~arm ~arm64
 LICENSE=MIT
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raspi56406.brendler/raspi-sources/linux-6.9.2-raspi.tbz2
-_md5_=0dfb296f86e3ae2ad7f3fc2e3bdcebc5
+_md5_=eb49f93f34c50b94c5d1a4359d17c91a
