--- a/metadata/md5-cache/dev-util/mkinitramfs-8.2.1
+++ b/metadata/md5-cache/dev-util/mkinitramfs-8.2.1
@@ -4,10 +4,11 @@ DESCRIPTION=create initramfs for LUKS encrypted / lvm system
 EAPI=8
 HOMEPAGE=https://github.com/JosephBrendler/myUtilities
 INHERIT=linux-info
+KEYWORDS=amd64 ~amd64
 LICENSE=MIT
 RDEPEND=>=dev-util/script_header_brendlefly-0.3.9 >=sys-apps/which-2.21 >=app-misc/pax-utils-1.1.7 >=sys-libs/glibc-2.23 >=sys-apps/file-5.29 >=app-arch/cpio-2.12-r1 >=sys-boot/grub-2.06-r1 >=sys-fs/lvm2-2.02.188-r2 >=sys-fs/cryptsetup-2.3.6-r2 >=sys-apps/busybox-1.34.1
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/mkinitramfs-8.2.1.tbz2
 _eclasses_=toolchain-funcs	14648d8795f7779e11e1bc7cf08b7536	multilib	b2a329026f2e404e9e371097dda47f96	linux-info	ea4122ba1d8791a12b78e53f9510a2e3
-_md5_=2a20e5a175a70213e7cb12f0a2d5feec
+_md5_=50e0d8f7c8806e2067c8c6a2dde3e8e2
