--- a/metadata/md5-cache/dev-sbc/qemu-tools-0.0.1
+++ b/metadata/md5-cache/dev-sbc/qemu-tools-0.0.1
@@ -1,5 +1,5 @@
 BDEPEND=>=app-admin/eselect-1.4.27-r1
-DEFINED_PHASES=install postinst preinst pretend setup
+DEFINED_PHASES=install postinst pretend setup
 DESCRIPTION=joetoo program to run and configure sbc emulation instances with qemu
 EAPI=8
 HOMEPAGE=https://github.com/joetoo
@@ -12,4 +12,4 @@ REQUIRED_USE=|| ( bcm2712-rpi-5-b bcm2711-rpi-4-b bcm2710-rpi-3-b-plus bcm2710-r
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/qemu-tools-0.0.1.tbz2
 _eclasses_=toolchain-funcs	14648d8795f7779e11e1bc7cf08b7536	multilib	b2a329026f2e404e9e371097dda47f96	linux-info	ea4122ba1d8791a12b78e53f9510a2e3
-_md5_=18bf27ea4980ced346eda3de92a56fb6
+_md5_=c9c1512661e78e840f9f9fed3011fea9
