--- a/metadata/md5-cache/dev-sbc/reflash_rp2-0.0.1
+++ b/metadata/md5-cache/dev-sbc/reflash_rp2-0.0.1
@@ -1,6 +1,6 @@
 BDEPEND=>=sys-devel/crossdev-20241215
 DEFINED_PHASES=install postinst setup
-DESCRIPTION=joetoo program to flash a program to the RP2040 microcontroller on a Radxa X4 SBC
+DESCRIPTION=flash a program to the RP2040 microcontroller on a Radxa X4 SBC
 EAPI=8
 HOMEPAGE=https://github.com/joetoo
 INHERIT=linux-info
@@ -12,4 +12,4 @@ RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/reflash_rp2-0.0.1.tbz2
 _eclasses_=toolchain-funcs	6afdb6107430c1832ca7e16aacbf8fa1	multilib	b2a329026f2e404e9e371097dda47f96	linux-info	ea4122ba1d8791a12b78e53f9510a2e3
-_md5_=7b4d21d93024d613ec751928fa621e61
+_md5_=58f35d5242a36415bd0bc0adf9678d37
