move mkinitramfs to dev-util category in myUtilities repo; make grub a USE in joetoo ebuild repo

--- a/metadata/md5-cache/dev-util/mkinitramfs-9.0.5
+++ b/metadata/md5-cache/dev-util/mkinitramfs-9.0.5
@@ -10,5 +10,5 @@ RDEPEND=>=dev-util/script_header_brendlefly-0.4.4 >=sys-apps/which-2.21 >=app-mi
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/mkinitramfs-9.0.5.tbz2
-_eclasses_=toolchain-funcs	6afdb6107430c1832ca7e16aacbf8fa1	multilib	b2a329026f2e404e9e371097dda47f96	linux-info	ea4122ba1d8791a12b78e53f9510a2e3
+_eclasses_=toolchain-funcs	f9d71a6efe9d083aec750dd13968e169	linux-info	ea4122ba1d8791a12b78e53f9510a2e3
 _md5_=35f415ba2539fbd2aa019fc92eff24c4
