--- a/sys-kernel/amlogic-sources/files/README
+++ b/sys-kernel/amlogic-sources/files/README
@@ -8,8 +8,12 @@ rm -r linux
 # Manually clone sources
 # browse https://www.kernel.org/ to determine latest stable version of kernel
 # browse https://github.com/libre-computer-project/libretech-linux and note available branches and tags
-# probably go with "rolling-stable"
-branch="linux-rolling-stable"
+# probably go with "rolling-stable" or more likely that which seems to track
+# the "current" armbian kernel --> "linux-6.12.y-lc" 
+#branch="linux-rolling-stable"
+branch_version=6.12
+branch="linux-${branch_version}.y-lc"
+
 git clone --depth 1 --branch ${branch} https://github.com/libre-computer-project/libretech-linux.git
 
 cd libretech-linux
