--- a/metadata/md5-cache/dev-sbc/crossbuild-tools-0.9.6
+++ b/metadata/md5-cache/dev-sbc/crossbuild-tools-0.9.6
@@ -4,8 +4,8 @@ EAPI=8
 HOMEPAGE=https://github.com/joetoo
 KEYWORDS=~arm64 ~amd64
 LICENSE=MIT
-RDEPEND=app-admin/eselect app-arch/tar dev-lang/python-exec dev-libs/openssl dev-util/joetoolkit dev-util/script_header_joetoo net-misc/curl net-misc/wget sys-apps/coreutils sys-apps/util-linux sys-block/parted sys-fs/dosfstools sys-fs/e2fsprogs sys-apps/grep sys-apps/portage
+RDEPEND=app-admin/eselect app-arch/tar dev-lang/python-exec dev-lang/rust-bin dev-libs/openssl dev-python/pkgconfig dev-util/joetoolkit dev-util/script_header_joetoo net-misc/curl net-misc/wget sys-apps/coreutils sys-apps/util-linux sys-block/parted sys-fs/dosfstools sys-fs/e2fsprogs sys-apps/grep sys-apps/portage
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/dev-sbc/crossbuild-tools-0.9.6.tbz2
-_md5_=7a28af6687b4eb4ccb8f0b091e9d8933
+_md5_=83826a11ae6a0a53ad002aabeecdb15d
