--- a/metadata/md5-cache/sys-kernel/linux-domU_joetoo_kernelimage-6.19.2
+++ b/metadata/md5-cache/sys-kernel/linux-domU_joetoo_kernelimage-6.19.2
@@ -9,5 +9,5 @@ LICENSE=MIT
 RDEPEND=raspi-sources? ( =sys-kernel/raspi-sources-6.19.2 ) rockchip-sources? ( =sys-kernel/rockchip-sources-6.19.2 )
 RESTRICT=mirror
 SLOT=6.19.2
-SRC_URI=https://raw.githubusercontent.com/JosephBrendler/myUtilities/master/sys-kernel/linux-domU_joetoo_kernelimage-6.19.2.tar.bz2
-_md5_=fbb878ca24aae48d98b44b3d03ed0c13
+SRC_URI=https://raspi56403.brendler/joetoo-kernels/linux-domU_joetoo_kernelimage-6.19.2.tar.bz2
+_md5_=a1b6ac2848f1a483f1d95a8f3fa1f059
